# botus_receptus

./: .editorconfig  .flake8  .git-blame-ignore-revs  .gitignore  .mise.toml  .neoconf.json  .nvim.lua  .pre-commit-config.yaml  .travis.yml  LICENSE  Pipfile  README.md  fix-poetry.sh  mise.toml  mypy.ini  poetry.toml  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml  renovate.json
.github/workflows/: codeql-analysis.yml  pythonpackage.yml  unit-tests.yml
.vim/: coc-settings.json
botus_receptus/: __init__.py  abc.py  bot.py  checks.py  context.py  exceptions.py  formatting.py  launcher.py  run.py  testing.py  util.py
botus_receptus/db/: __init__.py  bot.py  context.py  util.py
requirements/: base.txt  db.txt  dev.txt
src/aiohttp-stubs/: abc.pyi  connector.pyi
src/asyncpg-stubs/: __init__.pyi  _testbase.pyi  cluster.pyi  compat.pyi  connect_utils.pyi  connection.pyi  connresource.pyi  cursor.pyi  introspection.pyi  pool.pyi  prepared_stmt.pyi  transaction.pyi  types.pyi  utils.pyi
src/asyncpg-stubs/_testbase/: __init__.pyi  fuzzer.pyi
src/asyncpg-stubs/exceptions/: __init__.pyi  _base.pyi
src/asyncpg-stubs/pgproto/: pgproto.pyi  types.pyi
src/asyncpg-stubs/protocol/: __init__.pyi  protocol.pyi
src/asyncpg-stubs/protocol/codecs/: __init__.pyi
src/botus_receptus/: __init__.py  abc.py  app_commands.py  base.py  bot.py  checks.py  cli.py  client.py  cog.py  compat.py  config.py  context.py  embed.py  exceptions.py  formatting.py  interactive_pager.py  logging.py  paginator.py  re.py  run.py  testing.py  types.py  util.py  utils.py
src/botus_receptus/db/: __init__.py  base.py  bot.py  client.py  context.py  util.py  utils.py
src/botus_receptus/gino/: __init__.py  api.py  base.py  bot.py  model.py  util.py  utils.py
src/botus_receptus/interactive_pager/: __init__.py  base.py  embed.py
src/botus_receptus/sqlalchemy/: __init__.py  base.py  bot.py  client.py  session.py  types.py
src/botus_receptus/topgg/: __init__.py  base.py  bot.py  client.py
src/dataslots-stubs/: __init__.pyi
src/more_itertools-stubs/: __init__.pyi  more.pyi  recipes.pyi
src/uvloop-stubs/: __init__.pyi  loop.pyi
stubs/aiohttp/: client.pyi  client_reqrep.pyi  connector.pyi
stubs/asyncpg/: connection.pyi  cursor.pyi
stubs/discord/: __init__.pyi  abc.pyi  audit_logs.pyi  channel.pyi  client.pyi  guild.pyi  iterators.pyi  member.pyi  message.pyi  opus.pyi  permissions.pyi  player.pyi  reaction.pyi  role.pyi  user.pyi  utils.pyi  voice_client.pyi
stubs/discord/ext/commands/: __init__.pyi  bot.pyi  context.pyi  converter.pyi  core.pyi  errors.pyi
stubs/uvloop/: __init__.pyi
tests/: conftest.py  mocks.py  test_app_commands.py  test_bot.py  test_checks.py  test_cli.py  test_client.py  test_cog.py  test_config.py  test_context.py  test_embed.py  test_formatting.py  test_interactive_pager.py  test_logging.py  test_re.py  test_testing.py  test_util.py  test_utils.py  types.py
tests/client/: module_1.py  module_2.py  module_3.py  module_3_new.py  module_with_error.py  module_without_setup.py  setup_raises.py  setup_raises_with_teardown.py
tests/client/things/: __init__.py  one.py
tests/db/: test_context.py  test_util.py  test_utils.py
tests/gino/: test_model.py
tests/sqlalchemy/: test_bot.py  test_client.py  test_session.py  test_types.py
tests/topgg/: test_bot.py
